build: share test JVM warning suppression