@@ -29,6 +29,25 @@ trait CommonScalaModule extends ScalaModule with scalafmt.ScalafmtModule {
   }
 }
 
+trait CommonScalaTestModule extends ScalaModule {
+  private val unsafeMemoryAccessOption = "--sun-misc-unsafe-memory-access=allow"
+
+  override def jvmOptions = Task {
+    super.jvmOptions() ++ Seq(unsafeMemoryAccessOption)
+  }
+
+  override def forkEnv = Task {
+    val inherited = super.forkEnv()
+    val javaToolOptions = inherited
+      .get("JAVA_TOOL_OPTIONS")
+      .filter(_.nonEmpty)
+      .map(_ + s" $unsafeMemoryAccessOption")
+      .getOrElse(unsafeMemoryAccessOption)
+
+    inherited + ("JAVA_TOOL_OPTIONS" -> javaToolOptions)
+  }
+}
+
 trait InterceptorModule
     extends CommonScalaModule
     with mill.contrib.scoverage.ScoverageModule
@@ -122,7 +141,7 @@ trait MavenPluginSupport extends mill.Module with PublishModule with SonatypeCen
 
   override def pomPackagingType = "maven-plugin"
 
-  trait MavenPluginItestModule extends ScalaTests with TestModule.ZioTest {
+  trait MavenPluginItestModule extends ScalaTests with CommonScalaTestModule with TestModule.ZioTest {
     override def forkEnv = Task {
       super.forkEnv() ++ Map(
         "MILL_INTERCEPTOR_MAVEN_PLUGIN_JAR" -> MavenPluginSupport.this.publishedPluginJar().path.toString,
